<resources>
    <string name="app_name">Sehatin</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_title">Daftar</string>
    <string name="logo_sehatin">Logo Sehatin</string>
    <string name="sehatin">SEHATIN</string>
    <string name="Name">Nama</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Confirm_Password">Konfirmasi Password</string>
    <string name="Welcome">Selamat Datang Sobat Sehatin!</string>
    <string name="Privacy_Policy">Saya setuju dengan Kebijakan Privasi.</string>
    <string name="sudah_punya_akun">sudah punya akun?</string>
    <string name="Register">Daftar</string>
    <string name="register_Memuat">Membuat Akun…</string>
    <string name="Masuk">Masuk</string>
    <string name="Ingat_Saya">Ingat Saya</string>
    <string name="Lupa_Kata_Sandi">Lupa Kata Sandi?</string>
    <string name="Masuk_Dengan">Masuk Dengan"</string>
    <string name="Google">Masuk Dengan Google</string>
    <string name="belum_punya_akun">belum punya akun?</string>
    <string name="Daftar">Daftar Di Sini</string>
    <string name="Selamat_Datang">Selamat Datang Sobat Sehatin!</string>
    <string name="Email_Login">Email</string>
    <string name="Password_Login">Password</string>
    <string name="Masuk_Sebagai_Guest">Masuk Sebagai Guest</string>
    <string name="Atau_Coba_Dahulu">Atau Coba Dahulu</string>
    <string name="login_Memuat">Memuat…</string>
    <string name="Selamat_datang_Sobat_Sehatin">Selamat Datang\nSobat Sehatin!</string>
    <string name="Masukan_Data_Terlebih_dahulu_ya">Masukan Data Hanya Dengan Angka Saja Ya!</string>
    <string name="Berapa_Umurmu">Berapa Umurmu?</string>
    <string name="Berapa_Tinggimu">Berapa Tinggimu? (cm)</string>
    <string name="Berapa_Beratmu">Berapa Beratmu? (kg)</string>
    <string name="Simpan">Simpan</string>
    <string name="Masukkan_Umur">Masukkan Umur</string>
    <string name="Masukkan_Tinggi">Masukkan Tinggi</string>
    <string name="Masukkan_Berat">Masukkan Berat</string>
    <string name="Tahun">Tahun</string>
    <string name="UserData_Lakilaki">Laki-laki</string>
    <string name="UserData_Perempuan">Perempuan</string>
    <string name="UserData_Pilih_Gender">Pilih Gender</string>
    <string name="cm">Cm</string>
    <string name="kg">Kg</string>
    <string name="UserData_Memuat">Menyimpan Data…</string>
    <string name="beranda">Beranda</string>
    <string name="pencapaian">Pencapaian</string>
    <string name="tantangan">Tantangan</string>
    <string name="profile">Profil</string>
    <string name="Judul_Preview">Judul Preview</string>
    <string name="Deskripsi_Preview">Deskripsi preview disini.</string>
    <string name="intro1">Kunci Menuju Berat Badan Ideal Anda</string>
    <string name="intro1_desc">Hitung BMI dan dapatkan panduan nutrisi sehatmu hanya dalam aplikasi Sehatin</string>
    <string name="intro2">Dari Jogging Biasa Jadi Luar Biasa!</string>
    <string name="intro2_desc">Lacak performa larimu, ambil tantangan, dan rasakan keseruan mencapai target.</string>
    <string name="intro3">Yuk, Disiplin Demi Tubuh Prima!</string>
    <string name="intro3_desc">Pengingat makan sehat dan cek BMI rutin jadi teman setiamu di Sehatin.</string>
    <string name="Selanjutnya">Selanjutnya</string>
    <string name="Lewati">Lewati</string>
    <string name="Mulai_Sekarang">Mulai Sekarang</string>
    <string name="berat_badan">Kunci Menuju Berat Badan Ideal Anda</string>
    <string name="Hitung_BMI"> Hitung BMI dan dapatkan panduan nutrisi sehatmu hanya dalam aplikasi Sehatin</string>
    <string name="Sehatin_Data">Sehatin Data</string>
    <string name="Berapa_Berat_Badan">Berapa Beratmu? (kg)</string>
    <string name="Berapa_Tinggi_Badan">Berapa Tinggimu? (cm)</string>
    <string name="Berapa_Umur">Berapa Umurmu?</string>
    <string name="Kirim">Kirim</string>
    <string name="splash_sub"> Level Up Your Health!</string>
    <string name="splash_title">Sehatin</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="Username">Username</string>
    <string name="point">Point : 0</string>
    <string name="kondisi">Kalorimu Saat Ini</string>
    <string name="KKAL">1.000 KKAL</string>
    <string name="Umur">Umur</string>
    <string name="dashboard_body_condition">0 KKAL</string>
    <string name="Jenis_Kelamin">Jenis Kelamin</string>
    <string name="Laki_Laki">Laki-Laki</string>
    <string name="Perempuan">Perempuan</string>
    <string name="dashboard_Berat_Badan">Berat</string>
    <string name="Tinggi_Badan">Tinggi</string>
    <string name="Tahun18">18 Tahun</string>
    <string name="cm170">170</string>
    <string name="exp_level">13</string>
    <string name="kg40">40</string>
    <string name="berat">Berat</string>
    <string name="Body_Mass_Index"> Body Mass\nIndex</string>
    <string name="Pengingat_jam_makan">Pengingat\nJam Makan</string>
    <string name="Informasi_Makanan">Informasi\nMakanan</string>
    <string name="Kategori">Kategori</string>
    <string name="Olahraga">Olahraga</string>
    <string name="Tantangan_Sehatin">Tantangan Sehatin</string>
    <string name="Periksa">Periksa</string>
    <string name="Segera_Hadir">Segera hadir</string>
    <string name="Tantangan_Olahraga">Tantangan Olahraga</string>
    <string name="Tantangan_Makanan">Tantangan Makanan</string>
    <string name="Jadwal_Tantangan">Jadwal Tantangan</string>
    <string name="deskripsi_tantangan_olahraga">Tantangan Olahraga Push Up, Sit Up dan olahraga workout lainnya</string>
    <string name="Tantangan_subText">Selesaikan misi harianmu!</string>
    <string name="deskripsi_tantangan_makanan">Selesaikan Misi Edukasi Nutrisi untuk mendapatkan Poin &amp; EXP</string>
    <string name="Jadwal_Lencana">Jadwal Lencana</string>
    <string name="Email_profil">johndoe@gmail.com</string>
    <string name="Nama_profil">John Doe</string>
    <string name="Tukarpoin_Profil">Tukar Poin</string>
    <string name="PrivasiKebijakan_Profil">Privasi Dan Kebijakan</string>
    <string name="Logout_Profil">Logout</string>
    <string name="Edit_Profil">Edit</string>
    <string name="Pengaturan_Profil">Pengaturan</string>
    <string name="Tentang_Sehatin">Tentang Sehatin</string>
    <string name="Profil_Level">Lv. 13</string>
    <string name="Profil_Poin">1,250 Poin</string>
    <string name="Profil_EXP">65/100 EXP</string>
    <string name="Profil_Inventaris">Inventaris Skin &amp; Latar</string>
    <string name="BMI">BMI</string>
    <string name="BMI_Kalkulator">Kalkulator</string>
    <string name="Nama_BMI">Nama</string>
    <string name="Umur_BMI">Umur</string>
    <string name="Berat_BMI">Berat Badan</string>
    <string name="Tinggi_BMI">Tinggi Badan</string>
    <string name="Jenis_Kelamin_BMI">Jenis Kelamin</string>
    <string name="Gender_BMI_Laki_Laki">Laki-Laki</string>
    <string name="Gender_BMI_Perempuan">Perempuan</string>
    <string name="Menghitung_BMI">Menghitung</string>
    <string name="Hasil_BMI">Hasil BMI</string>
    <string name="Nama_Hasil_BMI">John Doe</string>
    <string name="Gender_Hasil_BMI">Laki - Laki</string>
    <string name="Skor_Hasil_BMI">16.5</string>
    <string name="Skor_Hasil_BMI_text">Skor BMI</string>
    <string name="hasil_umur_BMI">18 Tahun</string>
    <string name="hasil_umur_BMI_text">Umur</string>
    <string name="Hasil_Tinggi_BMI">170 cm</string>
    <string name="Hasil_Tinggi_BMI_text">Tinggi</string>
    <string name="Hasil_Berat_BMI">40 Kg</string>
    <string name="Hasil_Berat_BMI_text">Berat</string>
    <string name="Judul_hasil_BMI">Berat Badan Kurang</string>
    <string name="Jangkauan_Hasil_BMI">(BMI Kurang Dari 18.5)</string>
    <string name="Deskripsi_Hasil_BMI">BMI 16.5 menunjukkan berat badan kurang, perlu ditingkatkan dengan makan bergizi, latihan kekuatan, dan istirahat cukup agar tubuh lebih sehat.</string>
    <string name="Pengingat_Jam_Makan">Pengingat Jam Makan</string>
    <string name="Kategori_Makan_PJM"> Makan Siang</string>
    <string name="Waktu_Makan_PJM">12.00 AM</string>
    <string name="Hari_Makan_PJM">Senin</string>
    <string name="dialog_title">Tambah Pengingat</string>
    <string name="Judul_Pengingat_Makan">Judul Pengingat (Kategori)</string>
    <string name="Et_Dialog_Form_Makan">Contoh: Makan Siang</string>
    <string name="Judul_Dialog_Form_Makan_pilih_waktu">Jam Makan</string>
    <string name="waktu_Dialog_Form_Makan_pilih_waktu">12:00</string>
    <string name="Tanggal_Pengingat_dialog_form_makan">Tanggal Pengingat</string>
    <string name="Pilih_Tanggal_Pengingat_dialog_form_pengingat_makan">Senin, 15 Agu 2026</string>
    <string name="btn_simpan_pengingat_makan">Simpan Pengingat</string>
    <string name="Selamat_Datang_Informasi_Makanan"> Selamat Datang\nSobat Sehatin!</string>
    <string name="Informasi_Makanan_Sehat">Informasi Makanan Sehat</string>
    <string name="Deskripsi_Informasi_Makanan_Sehat"> Berikut adalah Infomasi Mengenai Makanan dan Minuman Sehat Sobat Sehatin!</string>
    <string name="Nama_Makanan_Informasi_Makanan_Salad">Salad</string>
    <string name="judul_Deskripsi_Makanan">Deskripsi Makanan</string>
    <string name="Kalori_Detail_Informasi_Makanan">198 Cal - 300 g</string>
    <string name="Deskripsi_Salad">Salad adalah hidangan sehat yang terdiri dari campuran bahan-bahan segar, utamanya sayuran dan buah-buahan.\n\nBiasanya disajikan dingin dengan saus (dressing) untuk memperkaya rasa. Salad bisa menjadi hidangan pendamping atau makanan utama yang mengenyangkan jika ditambahkan sumber protein seperti ayam atau telur.\n\nIntinya, salad merupakan cara mudah dan lezat untuk mendapatkan asupan serat, vitamin, dan mineral.</string>
    <string name="judul_Olahraga">Olahraga</string>
    <string name="olahraga_Selamatdatang">Selamat Datang\nSobat Sehatin!</string>
    <string name="olahraga_belumselesai">Belum Selesai</string>
    <string name="olahraga_selesai">Selesai</string>
    <string name="nama_olahraga">Push Up</string>
    <string name="olahraga_deskripsi">Pilih tantangan hari ini, selesaikan, dan dapatkan EXP untuk naik level!</string>
    <string name="pause_judul">Sesi Dijeda</string>
    <string name="pause_deskripsi">Ambil napas sejenak, lalu kembali beraksi!</string>
    <string name="pause_lanjutkan">Lanjutkan</string>
    <string name="pause_MulaiUlang">Mulai Ulang</string>
    <string name="pause_keluar">Keluar</string>
    <string name="hasil_olahraga_angka">15</string>
    <string name="hasil_olahraga_text">Kali</string>
    <string name="hasil_olahraga_selamat">Selamat Atas\nKeberhasilannya!</string>
    <string name="hasil_olahraga_exp">+10 Exp</string>
    <string name="hasil_olahraga_waktu">01:00</string>
    <string name="hasil_olahraga_waktu_text">Waktu</string>
    <string name="hasil_olahraga_kalori">340</string>
    <string name="hasil_olahraga_kalori_text">Kalori</string>
    <string name="hasil_olahraga_kembali">Selesai &amp; Kembali</string>
    <string name="hasil_olahraga_kembali_text">Kembali</string>
    <string name="SesiOlahraga_Detik">Detik</string>
    <string name="Lencana_Sehatin">Lencana Sehatin</string>
    <string name="Jeda_judul">JEDA</string>
    <string name="Jeda_lanjutkan">Lanjutkan</string>
    <string name="Jeda_mulai_ulang">Mulai Ulang</string>
    <string name="Jeda_keluar">Keluar</string>
    <string name="btn_delete_alarm">btn delete alarm</string>
</resources>