<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        tools:context=".UserData.UserDataActivity">

        <ImageView
            android:id="@+id/img_logo_top"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/logo_sehatin"
            android:src="@drawable/logo_sehatin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lexenddeca"
            android:text="@string/Sehatin_Data"
            android:textColor="@color/birutua"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_logo_top" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/lexenddeca"
            android:text="@string/Selamat_datang_Sobat_Sehatin"
            android:textColor="@color/birutua"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_app_name" />

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lexenddeca"
            android:text="@string/Masukan_Data_Terlebih_dahulu_ya"
            android:textColor="@color/birutua"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/label_umur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/lexenddeca"
            android:text="@string/Berapa_Umurmu"
            android:textColor="@color/birutua"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />

        <EditText
            android:id="@+id/et_umur"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:autofillHints="et_umur"
            android:background="@drawable/bg_edittext_rounded"
            android:fontFamily="@font/lexenddeca"
            android:hint="@string/Masukkan_Umur"
            android:inputType="number"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/label_umur" />

        <TextView
            android:id="@+id/label_tinggi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lexenddeca"
            android:text="@string/Berapa_Tinggimu"
            android:textColor="@color/birutua"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_umur" />

        <EditText
            android:id="@+id/et_tinggi"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:autofillHints="et_tinggi"
            android:background="@drawable/bg_edittext_rounded"
            android:fontFamily="@font/lexenddeca"
            android:hint="@string/Masukkan_Tinggi"
            android:inputType="number"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/label_tinggi" />

        <TextView
            android:id="@+id/label_berat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lexenddeca"
            android:text="@string/Berapa_Beratmu"
            android:textColor="@color/birutua"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_tinggi" />

        <EditText
            android:id="@+id/et_berat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:autofillHints="et_berat"
            android:background="@drawable/bg_edittext_rounded"
            android:fontFamily="@font/lexenddeca"
            android:hint="@string/Masukkan_Berat"
            android:inputType="numberDecimal"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/label_berat" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_kirim"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_btn_register"
            android:text="@string/Kirim"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/et_berat" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="Logo_sehatin"
            android:src="@drawable/logo_sehatin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_kirim" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>