<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="24dp"
    app:cardElevation="12dp"
    app:strokeColor="#000000"
    app:strokeWidth="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lexenddeca"
            android:text="@string/Jeda_judul"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginBottom="24dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_lanjutkan"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#33A1E0"
            android:fontFamily="@font/lexenddeca"
            android:text="@string/Jeda_lanjutkan"
            android:textColor="@color/putih"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="16dp"
            app:strokeColor="@color/black"
            app:strokeWidth="3dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_mulai_ulang"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#F5F5F5"
            android:fontFamily="@font/lexenddeca"
            android:text="@string/Jeda_mulai_ulang"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="16dp"
            app:strokeColor="@color/black"
            app:strokeWidth="3dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_keluar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="#FFEBEE"
            android:fontFamily="@font/lexenddeca"
            android:text="@string/Jeda_keluar"
            android:textColor="#D32F2F"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="16dp"
            app:strokeColor="@color/black"
            app:strokeWidth="3dp" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>